--- a/public/styles.css
+++ b/public/styles.css
@@ -45,7 +45,7 @@ button {
 }
 #footer {
    background-color:blue;
-   height:40px;
+   height:35px;
    position:relative;
    bottom:0;
    width:100%;
@@ -122,6 +122,5 @@ button {
 }
 .scores {
    display:grid;
-   grid-template-columns:100px 100px;
-   grid-template-rows:50px 50px 50px 50px 50px 50px;
+   grid-template-columns:1fr 200px 125px 1fr;
 }
